consul-cel/enforce-min-tls-version/.chainsaw-test/validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: enforce-min-tls-version
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: enforce-min-tls-version
