consul-cel/enforce-min-tls-version/.chainsaw-test/validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: enforce-min-tls-version-binding
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: enforce-min-tls-version
spec:
  policyName: enforce-min-tls-version
